--- a/PortFolion/PortFolion/Views/ModernMainWindow.xaml
+++ b/PortFolion/PortFolion/Views/ModernMainWindow.xaml
@@ -44,7 +44,7 @@
             <!--<Button Content="settings"/>
             <Button Content="options"  Command="{Binding ShowLisence}"/>-->
             <ToggleButton Content="License" IsChecked="{Binding IsOpen,ElementName=LicenseFlyout}"/>
-            <Button Content="Wiki"/>
+            <!--<Button Content="Wiki"/>-->
         </mah:WindowCommands>
     </mah:MetroWindow.RightWindowCommands>
 
