--- a/PortFolion/PortFolion/EditComponent/AccountEditWindow.xaml
+++ b/PortFolion/PortFolion/EditComponent/AccountEditWindow.xaml
@@ -10,6 +10,7 @@
                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                  xmlns:converter="clr-namespace:PortFolion.Views.Converter"
                  xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                 xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                  x:Name="editWindow"
                  mc:Ignorable="d" SaveWindowPosition="False"
                  GlowBrush="{DynamicResource AccentColorBrush}" BorderThickness="1"
@@ -82,7 +83,7 @@
         <DataTemplate x:Key="LoadingTemplate">
             <Grid><!--{x:Static SystemColors.ControlDarkColor}-->
                 <Grid Panel.ZIndex="2" Grid.Column="1" Background="Black" Opacity="0.2"/>
-                <mah:ProgressRing Panel.ZIndex="3" Grid.Column="1" IsActive="True" Visibility="{Binding IsLoading,Converter={StaticResource BoolToVisibility},Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
+                <mah:ProgressRing Panel.ZIndex="3" Grid.Column="1" IsActive="True"/>
             </Grid>
         </DataTemplate>
     </mah:MetroWindow.Resources>
@@ -99,6 +100,9 @@
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
+        <ContentControl d:IsHidden="true"  Panel.ZIndex="1" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="5"
+                        Content="{Binding}" ContentTemplate="{StaticResource LoadingTemplate}"
+                        Visibility="{Binding IsLoading,Converter={StaticResource BoolToVisibility},Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
         <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5">
             <TextBlock Text="{Binding CurrentDate, StringFormat=yyyy年 M月 d日 (ddd)}" FontSize="40"/>
         </StackPanel>
@@ -125,7 +129,16 @@
             </StackPanel>
         </WrapPanel>
         <Grid Grid.Row="2" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center">
-            <Button Content="株価更新" Margin="5,10,5,0" Command="{Binding ApplyCurrentPerPrice}"/>
+            <Button Margin="5,10,5,0" Command="{Binding ApplyCurrentPerPrice}">
+                <Button.ContentTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <iconPacks:PackIconMaterial Kind="Refresh" VerticalAlignment="Center"/>
+                            <TextBlock Text="株価更新" VerticalAlignment="Center" Margin="5,0,0,0"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </Button.ContentTemplate>
+            </Button>
         </Grid>
         <DataGrid Grid.Row="3" Grid.Column="1" ItemsSource="{Binding Elements}" AutoGenerateColumns="False">
             <DataGrid.Resources>
