--- a/PortFolion/PortFolion/GraphComponent/GraphTab.xaml
+++ b/PortFolion/PortFolion/GraphComponent/GraphTab.xaml
@@ -65,13 +65,6 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <DockPanel Grid.Row="0" Grid.ColumnSpan="2">
-                    <!--<ToggleButton IsChecked="{Binding VisibleParams,Mode=OneWay}" x:Name="OpenParams" DockPanel.Dock="Left" Content="{iconPacks:PackIconMaterial Kind=Settings}">
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="Click" >
-                                <ei:CallMethodAction TargetObject="{Binding}" MethodName="EnableParams"/>
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
-                    </ToggleButton>-->
                     <Button DockPanel.Dock="Right">
                         <Button.ContentTemplate>
                             <DataTemplate>
@@ -120,10 +113,6 @@
                         </DockPanel>-->
                     </StackPanel>
                 </Expander>
-                <!--<GroupBox Grid.Row="1" Grid.ColumnSpan="2" Header="Params"  mah:ControlsHelper.ContentCharacterCasing="Normal"
-                    Visibility="{Binding IsChecked,ElementName=OpenParams,UpdateSourceTrigger=PropertyChanged,Converter={StaticResource BoolToVisibility}}">
-
-                </GroupBox>-->
                 
                 <GroupBox Grid.Row="2" Margin="0,0,2.5,0" Grid.Column="0" Header="Date" mah:ControlsHelper.ContentCharacterCasing="Normal">
                     <TreeView ItemsSource="{Binding DateList}" Style="{StaticResource VirtualisedMetroTreeView}">
@@ -151,7 +140,7 @@
                     <TreeView ItemsSource="{Binding Root}" Style="{StaticResource VirtualisedMetroTreeView}">
                         <TreeView.ItemContainerStyle>
                             <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource MetroTreeViewItem}">
-                                <Setter Property="IsSelected" Value="{Binding IsSelected,Mode=TwoWay}"/>
+                                <Setter Property="IsSelected" Value="{Binding IsSelected}"/>
                                 <Setter Property="IsExpanded" Value="{Binding IsExpand,Mode=TwoWay}"/>
                                 <Setter Property="FontWeight" Value="Normal" />
                                 <Style.Triggers>
