--- a/PortFolion/PortFolion/EditComponent/NodeNameEditWindow.xaml
+++ b/PortFolion/PortFolion/EditComponent/NodeNameEditWindow.xaml
@@ -45,7 +45,7 @@
             <TextBlock Text="{Binding PresentName,StringFormat=変更前 : {0}}" Margin="0,3"/>
             <TextBox x:Name="editText" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" Margin="0,3"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,3">
-                <Button Content="Cancel" Command="{Binding CancelCmd}" Margin="3,0"/>
+                <Button Content="キャンセル" Command="{Binding CancelCmd}" Margin="3,0"/>
                 <Button Content="OK" Command="{Binding ExecuteCmd}" Margin="3,0"/>
             </StackPanel>
         </StackPanel>
