--- a/PortFolion/PortFolion/GraphComponent/GraphBullets.xaml
+++ b/PortFolion/PortFolion/GraphComponent/GraphBullets.xaml
@@ -100,14 +100,14 @@
 
                     </DockPanel>
                     <lvc:CartesianChart x:Name="TransGraph" Grid.Row="1" Series="{Binding}"
-                                        LegendLocation="None" MinHeight="250" Zoom="X">
+                                        LegendLocation="None" MinHeight="250" Zoom="None">
                         <lvc:CartesianChart.DataTooltip>
                             <lvc:DefaultTooltip Background="Black" Opacity="0.7"/>
                         </lvc:CartesianChart.DataTooltip>
                         <lvc:CartesianChart.AxisX>
                             <lvc:Axis x:Name="GraphXAxis" MinRange="2" Labels="{Binding Labels}" Position="LeftBottom" RangeChangedCommand="{Binding RangeChangedCmd}"
-                                      MinValue="{Binding DisplayMinValue,UpdateSourceTrigger=PropertyChanged,Mode=OneWayToSource}"
-                                      MaxValue="{Binding DisplayMaxValue,UpdateSourceTrigger=PropertyChanged,Mode=OneWayToSource}">
+                                      MinValue="{Binding DisplayMinValue,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"
+                                      MaxValue="{Binding DisplayMaxValue,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}">
                             <!--<lvc:Axis x:Name="GraphXAxis" MinRange="2" Labels="{Binding Labels}" Position="LeftBottom"
                                       MinValue="{Binding LowerValue,ElementName=RangeSlider,Mode=OneWay}"
                                       MaxValue="{Binding UpperValue,ElementName=RangeSlider,Mode=OneWay}">-->
@@ -127,7 +127,7 @@
                     <mah:RangeSlider x:Name="RangeSlider" Grid.Row="2" AutoToolTipPlacement="TopLeft" SmallChange="1" LargeChange="5"
                                      Minimum="0" Maximum="{Binding MaxLimit,Mode=OneWay}" 
                                      LowerValue="{Binding DisplayMinValue,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"
-                                     UpperValue="{Binding DisplayMaxValue,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"/>
+                                     UpperValue="{Binding DisplayMaxValue,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" Margin="25,0"/>
                 </Grid>
             </DataTemplate>
 
