--- a/PortFolion/PortFolion/GraphComponent/GraphBullets.xaml
+++ b/PortFolion/PortFolion/GraphComponent/GraphBullets.xaml
@@ -100,17 +100,14 @@
 
                     </DockPanel>
                     <lvc:CartesianChart x:Name="TransGraph" Grid.Row="1" Series="{Binding}"
-                                        LegendLocation="None" MinHeight="250" Zoom="None">
+                                        LegendLocation="None" MinHeight="230" Zoom="None">
                         <lvc:CartesianChart.DataTooltip>
                             <lvc:DefaultTooltip Background="Black" Opacity="0.7"/>
                         </lvc:CartesianChart.DataTooltip>
                         <lvc:CartesianChart.AxisX>
                             <lvc:Axis x:Name="GraphXAxis" MinRange="2" Labels="{Binding Labels}" Position="LeftBottom" RangeChangedCommand="{Binding RangeChangedCmd}"
-                                      MinValue="{Binding DisplayMinValue,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"
-                                      MaxValue="{Binding DisplayMaxValue,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}">
-                            <!--<lvc:Axis x:Name="GraphXAxis" MinRange="2" Labels="{Binding Labels}" Position="LeftBottom"
-                                      MinValue="{Binding LowerValue,ElementName=RangeSlider,Mode=OneWay}"
-                                      MaxValue="{Binding UpperValue,ElementName=RangeSlider,Mode=OneWay}">-->
+                                      MinValue="{Binding DisplayMinValue,Mode=OneWay}"
+                                      MaxValue="{Binding DisplayMaxValue,Mode=OneWay}">
                                 <lvc:Axis.Separator>
                                     <lvc:Separator StrokeThickness="1" StrokeDashArray="2"/>
                                 </lvc:Axis.Separator>
@@ -124,10 +121,11 @@
                             </lvc:Axis>
                         </lvc:CartesianChart.AxisY>
                     </lvc:CartesianChart>
-                    <mah:RangeSlider x:Name="RangeSlider" Grid.Row="2" AutoToolTipPlacement="TopLeft" SmallChange="1" LargeChange="5"
-                                     Minimum="0" Maximum="{Binding MaxLimit,Mode=OneWay}" 
+                    <mah:RangeSlider x:Name="RangeSlider" Grid.Row="2" Minimum="0" Margin="25,0,25,2"
+                                     Maximum="{Binding MaxLimit,Mode=OneWay}" 
                                      LowerValue="{Binding DisplayMinValue,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"
-                                     UpperValue="{Binding DisplayMaxValue,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" Margin="25,0"/>
+                                     UpperValue="{Binding DisplayMaxValue,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"
+                                     AutoToolTipPlacement="TopLeft" IsSnapToTickEnabled="True" IsMoveToPointEnabled="True" SmallChange="1"/>
                 </Grid>
             </DataTemplate>
 
